tests/analyzer/fail/constexpr-type-unsupported.api
// expected: 1015

constexpr val1: anyopaque = "";
